--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
   }
 }
